[gd_scene load_steps=7 format=2]

[ext_resource path="res://BlenderModels/ShooterZombie.gltf" type="PackedScene" id=1]
[ext_resource path="res://Scenes/EnemyZombieShooter.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.8

[sub_resource type="CylinderShape" id=2]
radius = 9.0
height = 0.6

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="PrismMesh" id=4]

[node name="EnemyZombieShooter" type="KinematicBody"]
script = ExtResource( 2 )

[node name="ShooterZombie" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.25, 0, -2.18557e-08, 0, 0.25, 0, 2.18557e-08, 0, -0.25, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cast_to = Vector3( 0, 0, -10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Launcher" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 1, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, -1.74846e-08, 0.4, 0, -0.3, -1.31134e-08, 0, 1, -1 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
